// Original file: ../protobuf-schemas/lobby.proto


export interface Lobby {
  'id'?: (number);
  'size'?: (number);
  'ownerId'?: (number);
  'memberIds'?: (number)[];
  'createdAt'?: (string);
}

export interface Lobby__Output {
  'id'?: (number);
  'size'?: (number);
  'ownerId'?: (number);
  'memberIds'?: (number)[];
  'createdAt'?: (string);
}
